@@ -69,7 +69,7 @@ public class TestFreshQualityDiscountPercentOverrideToZero extends TestQualityDi
 		super.step_validate_before_aggregation(invoiceCandidates, ignored);
 
 		// Make sure it's using our aggregator
-		final I_C_Invoice_Candidate ic = invoiceCandidates.get(0);
+		final I_C_Invoice_Candidate ic = invoiceCandidates.getFirst();
 		assertThat(ic.getC_Invoice_Candidate_Agg(), is(freshAgg));
 	}
 
