@@ -81,7 +81,7 @@ public class TestFreshTwoReceiptssOneInvoice_FreshQualityDiscount1 extends TestT
 	{
 		super.step_validate_before_aggregation(invoiceCandidates, ignored);
 
-		final I_C_Invoice_Candidate ic = invoiceCandidates.get(0);
+		final I_C_Invoice_Candidate ic = invoiceCandidates.getFirst();
 
 		assertThat(ic.getC_Invoice_Candidate_Agg(), is(freshAgg));
 	}
@@ -90,7 +90,7 @@ public class TestFreshTwoReceiptssOneInvoice_FreshQualityDiscount1 extends TestT
 	protected void step_validate_after_aggregation(List<I_C_Invoice_Candidate> invoiceCandidates, List<I_M_InOutLine> inOutLines, List<IInvoiceHeader> invoices)
 	{
 		assertEquals("We are expecting one invoice: " + invoices, 1, invoices.size());
-		final IInvoiceHeader invoice = invoices.remove(0);
+		final IInvoiceHeader invoice = invoices.removeFirst();
 
 		final I_C_Invoice_Candidate ic = CollectionUtils.singleElement(invoiceCandidates);
 
@@ -125,7 +125,7 @@ public class TestFreshTwoReceiptssOneInvoice_FreshQualityDiscount1 extends TestT
 		// also verify that 'iol12_five_disp' is associated to both invoiceLines 1 and 2
 		assertThat(getForInOutLine(invoiceLines, iol22_twenty_disp), hasItems(invoiceLine1));
 
-		final IInvoiceLineRW invoiceLine2 = forIol22.get(0);
+		final IInvoiceLineRW invoiceLine2 = forIol22.getFirst();
 
 		assertThat(invoiceLine2.getQtysToInvoice().getStockQty().toBigDecimal(), comparesEqualTo(qtyDisputed.negate()));
 		assertThat(invoiceLine2.getPriceActual().toMoney().toBigDecimal(), comparesEqualTo(BigDecimal.ONE));
