@@ -83,7 +83,7 @@ public class TestFreshTwoReceiptssOneInvoice_FreshQualityDiscount2 extends TestT
 	{
 		super.step_validate_before_aggregation(invoiceCandidates, ignored);
 
-		final I_C_Invoice_Candidate ic = invoiceCandidates.get(0);
+		final I_C_Invoice_Candidate ic = invoiceCandidates.getFirst();
 
 		assertThat(ic.getC_Invoice_Candidate_Agg(), is(freshAgg));
 	}
@@ -92,7 +92,7 @@ public class TestFreshTwoReceiptssOneInvoice_FreshQualityDiscount2 extends TestT
 	protected void step_validate_after_aggregation(List<I_C_Invoice_Candidate> invoiceCandidates, List<I_M_InOutLine> inOutLines, List<IInvoiceHeader> invoices)
 	{
 		assertEquals("We are expecting one invoice: " + invoices, 1, invoices.size());
-		final IInvoiceHeader invoice = invoices.remove(0);
+		final IInvoiceHeader invoice = invoices.removeFirst();
 		final I_C_Invoice_Candidate ic = CollectionUtils.singleElement(invoiceCandidates);
 
 		final List<IInvoiceLineRW> invoiceLines = getInvoiceLines(invoice);
