@@ -99,13 +99,13 @@ public class JoinWeightTareAdjustPropagationTest extends AbstractWeightAttribute
 		// Assert data integrity on TARGET TUs
 		//
 		Assert.assertEquals("Invalid amount of remaining TUs after join", 1, splitTradingUnits.size());
-		final I_M_HU splitTU1 = splitTradingUnits.get(0);
+		final I_M_HU splitTU1 = splitTradingUnits.getFirst();
 		final IAttributeStorage attributeStorageTU1 = attributeStorageFactory.getAttributeStorage(splitTU1);
 		assertSingleHandlingUnitWeights(attributeStorageTU1, newHUWeightsExpectation("8.765", "7.765", "1", "0"));
 
 		//
 		// Simulate - take off one of the TUKeys to bind it to the new LU
-		final I_M_HU tradingUnitToJoin2 = splitTradingUnits.remove(0);
+		final I_M_HU tradingUnitToJoin2 = splitTradingUnits.removeFirst();
 
 		helper.joinHUs(huContext, loadingUnit, tradingUnitToJoin2);
 
@@ -155,7 +155,7 @@ public class JoinWeightTareAdjustPropagationTest extends AbstractWeightAttribute
 		//
 		// Simulate - take off one of the TUKeys to bind it to the new LU
 		final I_M_HU tradingUnitToJoin1 = splitTradingUnits.remove(1);
-		final I_M_HU tradingUnitToJoin2 = splitTradingUnits.remove(0);
+		final I_M_HU tradingUnitToJoin2 = splitTradingUnits.removeFirst();
 
 		helper.joinHUs(huContext, loadingUnit, tradingUnitToJoin1, tradingUnitToJoin2);
 
@@ -204,7 +204,7 @@ public class JoinWeightTareAdjustPropagationTest extends AbstractWeightAttribute
 
 		//
 		// Source LU
-		final I_M_HU sourceLU = splitLUs.get(0);
+		final I_M_HU sourceLU = splitLUs.getFirst();
 		Assert.assertTrue("The target LU we just split to shall be a top-level handling unit", sourceLU.getM_HU_Item_Parent_ID() <= 0);
 
 		final I_M_HU sourceTradingUnitWith10 = findTUInLUWithQty(sourceLU, 10); // find a TU with 10 x CU
