@@ -283,13 +283,13 @@ public class StockCandidateServiceTests
 
 		final List<I_MD_Candidate> records = DispoTestUtils.sortByDateProjected(DispoTestUtils.retrieveAllRecords());
 		assertThat(records).hasSize(4);
-		assertDateAndQty(records.get(0), t1, "10");
+		assertDateAndQty(records.getFirst(), t1, "10");
 		assertDateAndQty(records.get(1), t2, "6");
 		assertDateAndQty(records.get(2), t3, "3");
 		assertDateAndQty(records.get(3), t4, "5");
 
 		// all these stock records need to have the same group-ID
-		final int groupId = records.get(0).getMD_Candidate_GroupId();
+		final int groupId = records.getFirst().getMD_Candidate_GroupId();
 		assertThat(groupId).isGreaterThan(0);
 		records.forEach(r -> assertThat(r.getMD_Candidate_GroupId()).isEqualTo(groupId));
 	}
@@ -301,14 +301,14 @@ public class StockCandidateServiceTests
 		{
 			final List<I_MD_Candidate> records = DispoTestUtils.sortByDateProjected(DispoTestUtils.retrieveAllRecords());
 			assertThat(records).hasSize(1);
-			assertDateAndQty(records.get(0), t1, "10");
+			assertDateAndQty(records.getFirst(), t1, "10");
 		}
 
 		invokeStockCandidateService(t4, "2");  // (t1 => 10), (t4 => 12)
 		{
 			final List<I_MD_Candidate> records = DispoTestUtils.sortByDateProjected(DispoTestUtils.retrieveAllRecords());
 			assertThat(records).hasSize(2);
-			assertDateAndQty(records.get(0), t1, "10");
+			assertDateAndQty(records.getFirst(), t1, "10");
 			assertDateAndQty(records.get(1), t4, "12");
 		}
 
@@ -316,7 +316,7 @@ public class StockCandidateServiceTests
 		{
 			final List<I_MD_Candidate> records = DispoTestUtils.sortByDateProjected(DispoTestUtils.retrieveAllRecords());
 			assertThat(records).hasSize(3);
-			assertDateAndQty(records.get(0), t1, "10");
+			assertDateAndQty(records.getFirst(), t1, "10");
 			assertDateAndQty(records.get(1), t3, "7");
 			assertDateAndQty(records.get(2), t4, "9");
 		}
@@ -325,7 +325,7 @@ public class StockCandidateServiceTests
 		{
 			final List<I_MD_Candidate> records = DispoTestUtils.sortByDateProjected(DispoTestUtils.retrieveAllRecords());
 			assertThat(records).hasSize(4);
-			assertDateAndQty(records.get(0), t1, "10");
+			assertDateAndQty(records.getFirst(), t1, "10");
 			assertDateAndQty(records.get(1), t2, "6");
 			assertDateAndQty(records.get(2), t3, "3");
 			assertDateAndQty(records.get(3), t4, "5");
@@ -333,7 +333,7 @@ public class StockCandidateServiceTests
 
 		// all these stock records need to have the same group-ID
 		final List<I_MD_Candidate> records = DispoTestUtils.sortByDateProjected(DispoTestUtils.retrieveAllRecords());
-		final int groupId = records.get(0).getMD_Candidate_GroupId();
+		final int groupId = records.getFirst().getMD_Candidate_GroupId();
 		assertThat(groupId).isGreaterThan(0);
 		records.forEach(r -> assertThat(r.getMD_Candidate_GroupId()).isEqualTo(groupId));
 	}
@@ -352,7 +352,7 @@ public class StockCandidateServiceTests
 
 			final List<I_MD_Candidate> records = DispoTestUtils.sortByDateProjected(DispoTestUtils.retrieveAllRecords());
 			assertThat(records).hasSize(1);
-			assertDateAndQty(records.get(0), t1, "10");
+			assertDateAndQty(records.getFirst(), t1, "10");
 		}
 
 		{
@@ -361,7 +361,7 @@ public class StockCandidateServiceTests
 
 			final List<I_MD_Candidate> records = DispoTestUtils.sortByDateProjected(DispoTestUtils.retrieveAllRecords());
 			assertThat(records).hasSize(2);
-			assertDateAndQty(records.get(0), t1, "10");
+			assertDateAndQty(records.getFirst(), t1, "10");
 			assertDateAndQty(records.get(1), t4, "12");
 		}
 
@@ -371,7 +371,7 @@ public class StockCandidateServiceTests
 
 			final List<I_MD_Candidate> records = DispoTestUtils.sortByDateProjected(DispoTestUtils.retrieveAllRecords());
 			assertThat(records).hasSize(3);
-			assertDateAndQty(records.get(0), t1, "10");
+			assertDateAndQty(records.getFirst(), t1, "10");
 			assertDateAndQty(records.get(1), t3, "7");
 			assertDateAndQty(records.get(2), t4, "9");
 		}
@@ -382,7 +382,7 @@ public class StockCandidateServiceTests
 
 			final List<I_MD_Candidate> records = DispoTestUtils.sortByDateProjected(DispoTestUtils.retrieveAllRecords());
 			assertThat(records).hasSize(4);
-			assertDateAndQty(records.get(0), t1, "10");
+			assertDateAndQty(records.getFirst(), t1, "10");
 			assertDateAndQty(records.get(1), t3, "7");
 			assertDateAndQty(records.get(2), t3, "3");
 			assertDateAndQty(records.get(3), t4, "5");
@@ -390,9 +390,9 @@ public class StockCandidateServiceTests
 
 		// all these stock records need to have the same group-ID
 		final List<I_MD_Candidate> records = DispoTestUtils.retrieveAllRecords();
-		assertThatModel(records.get(0)).hasValueGreaterThanZero(I_MD_Candidate.COLUMN_MD_Candidate_GroupId);
+		assertThatModel(records.getFirst()).hasValueGreaterThanZero(I_MD_Candidate.COLUMN_MD_Candidate_GroupId);
 
-		final int groupId = records.get(0).getMD_Candidate_GroupId();
+		final int groupId = records.getFirst().getMD_Candidate_GroupId();
 		assertThat(records).allSatisfy(r -> assertThatModel(r).hasNonNullValue(I_MD_Candidate.COLUMN_MD_Candidate_GroupId, groupId));
 	}
 
@@ -410,7 +410,7 @@ public class StockCandidateServiceTests
 		{ // guard
 			final List<I_MD_Candidate> records = DispoTestUtils.sortByDateProjected(DispoTestUtils.filter(CandidateType.STOCK));
 			assertThat(records).hasSize(5);
-			assertDateAndQty(records.get(0), t1, "10");
+			assertDateAndQty(records.getFirst(), t1, "10");
 			assertDateAndQty(records.get(1), t3, "7");
 			assertDateAndQty(records.get(2), t4, "9");
 			assertDateAndQty(records.get(3), t5, "6");
@@ -437,7 +437,7 @@ public class StockCandidateServiceTests
 		// expecting (t1 => 10), (t2 => 7), (t3 => 4), (t4 => 6), (t6 => 11)
 		final List<I_MD_Candidate> records = DispoTestUtils.sortByDateProjected(DispoTestUtils.filter(CandidateType.STOCK));
 		assertThat(records).hasSize(5);
-		assertDateAndQty(records.get(0), t1, "10");
+		assertDateAndQty(records.getFirst(), t1, "10");
 		assertDateAndQty(records.get(1), t2, "7");
 		assertDateAndQty(records.get(2), t3, "4");
 		assertDateAndQty(records.get(3), t4, "6");
@@ -457,7 +457,7 @@ public class StockCandidateServiceTests
 		{ // guard
 			final List<I_MD_Candidate> records = DispoTestUtils.sortByDateProjected(DispoTestUtils.filter(CandidateType.STOCK));
 			assertThat(records).hasSize(5);
-			assertDateAndQty(records.get(0), t1, "10");
+			assertDateAndQty(records.getFirst(), t1, "10");
 			assertDateAndQty(records.get(1), t2, "7"); // 10 - 3
 			assertDateAndQty(records.get(2), t3, "4"); //  7 - 3
 			assertDateAndQty(records.get(3), t4, "6"); //  4 + 2
@@ -486,7 +486,7 @@ public class StockCandidateServiceTests
 		// expecting (t1 => 10), (t3 => 7), (t4 => 9), (t5 => 6), (t6 => 11)
 		final List<I_MD_Candidate> records = DispoTestUtils.sortByDateProjected(DispoTestUtils.filter(CandidateType.STOCK));
 		assertThat(records).hasSize(5);
-		assertDateAndQty(records.get(0), t1, "10");
+		assertDateAndQty(records.getFirst(), t1, "10");
 		assertDateAndQty(records.get(1), t3, "7"); // 10 - 3 (the t3's "-3")
 		assertDateAndQty(records.get(2), t4, "9"); //  7 + 2 
 		assertDateAndQty(records.get(3), t5, "6"); //  9 - 3 (the -3 of the previous ts that is now t5)
