@@ -116,9 +116,9 @@ public class PrintingEngineTestManual
 		final PrintPackage printPackage = new JsonBeanEncoder().decodeStream(getClass().getResourceAsStream("/test02_printpackage.json"), PrintPackage.class);
 
 		// make sure we are using the right printer
-		printPackage.getPrintPackageInfos().get(0).setPrintService(printingServiceName);
-		printPackage.getPrintPackageInfos().get(0).setTray(printingTray);
-		printPackage.getPrintPackageInfos().get(0).setTrayNumber(printingTrayNumber);
+		printPackage.getPrintPackageInfos().getFirst().setPrintService(printingServiceName);
+		printPackage.getPrintPackageInfos().getFirst().setTray(printingTray);
+		printPackage.getPrintPackageInfos().getFirst().setTrayNumber(printingTrayNumber);
 
 		final byte[] data = Base64.decodeBase64(Util.toByteArray(getClass().getResourceAsStream("/test02_printpackage_data_base64.txt")));
 
